<resources>
    <string name="app_name">hungryEh</string>
    <string name="welcome_intro">Welcome</string>
    <string name="login">Login</string>
    <string name="username">Username</string>

    <string name="password">Password(Minimum 6 characters)</string>
    <string name="e_mail">Email</string>
    <string name="tag">Enter your details</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="not_registered">Not Registered? Sign-Up here.</string>
    <string name="already_registered">Already Registered? Login here.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="subheading">A Go-To Guide for the SUTD Canteen</string>
    <string name="all_stalls">All Stalls</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="payment">Payment</string>
    <string name="confirm_logout">Confirm Logout?</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_to_homepage">Go to Homepage</string>


</resources>