<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"

        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"

        android:text="@string/tag"
        android:textSize="17sp"
        android:translationX="115dp"
        android:layout_marginLeft="25dp" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"

        android:padding="15dp"

        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:padding="15dp"

        android:textSize="15sp" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"

        android:textColor="@android:color/white"
        android:text="@string/login"/>



    <TextView
        android:id="@+id/tv_notReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:text="@string/not_registered"
        android:gravity="center_horizontal" />

</LinearLayout>