<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".HomePageActivity">
    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartof="parent"/>-->




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="442dp"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!--  <TextView
                android:id="@+id/txtdashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EatAh"
                android:textColor="@color/black"
                android:textSize="34sp" />-->


            <ImageView
                android:layout_width="214dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/logo2"
                android:translationX="20dp"
                tools:layout_gravity="center" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp">


            <TextView
                android:id="@+id/txtdashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="63dp"
                android:layout_marginRight="63dp"

                android:fontFamily="sans-serif-black"
                android:text="@string/subheading"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:translationX="45dp"
                android:typeface="sans" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true" />


        </RelativeLayout>

        <GridLayout
            android:id="@+id/maing"
            android:layout_width="match_parent"
            android:layout_height="363dp"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:columnOrderPreserved="false"
            android:rowCount="4">
            <!--1-->

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="0"
                android:layout_columnWeight="0"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/stallnew" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:text="@string/all_stalls"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            //2

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="0"
                android:layout_columnWeight="0"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/cart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/cart"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            //3

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="0"
                android:layout_columnWeight="0"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/favorites" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/favourites"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            //4

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="0"
                android:layout_columnWeight="0"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/order" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/my_orders"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            //5


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="0"
                android:layout_columnWeight="0"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/payment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/payment"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            //6

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="0"
                android:layout_columnWeight="0"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/timing" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"

                        android:text="@string/logout"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>






        </GridLayout>
        -->

    </LinearLayout>

</LinearLayout>